.provarCaches/00D5h000009Q6XQEA0/objects/provar__Field_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>provar__Field_Set_Mapping__c</fullName>
        <label>Field Set Mapping</label>
        <referenceTo>provar__Field_Set_Mapping__c</referenceTo>
        <relationshipLabel>Field Mappings</relationshipLabel>
        <relationshipName>Field_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Source_Field_Id__c</fullName>
        <externalId>true</externalId>
        <label>Source Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Source_Field_Is_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Source Field Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Source_Field_Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Source Field Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Source_Field_Name__c</fullName>
        <label>Source Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Source_Field_Type__c</fullName>
        <label>Source Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Source_Object_Id__c</fullName>
        <label>Source Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Source_Object_Name__c</fullName>
        <label>Source Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Target_Field_Id__c</fullName>
        <externalId>true</externalId>
        <label>Target Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Target_Field_Is_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Field Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Target_Field_Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Field Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Target_Field_Name__c</fullName>
        <label>Target Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Target_Field_Type__c</fullName>
        <label>Target Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Target_Object_Id__c</fullName>
        <label>Target Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Target_Object_Name__c</fullName>
        <label>Target Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Mapping</label>
    <nameField>
        <displayFormat>FM-{0000}</displayFormat>
        <label>Field Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>